compiler/tests/compiler/expected/output/CustomOperatorTooManyParamsError.shtk.txt
MODULE CustomOperatorTooManyParamsError.shtk
ERROR in Line 16 Col 23

    var c: Foobar = a + b
                      ^
Type error, operator '+' does not exist for CustomOperatorTooManyParamsError.shtk::Foobar and CustomOperatorTooManyParamsError.shtk::Foobar

CustomOperatorTooManyParamsError.shtk:16:22
